# veda-ai-fullstack-assignment

./: .dockerignore  .gitignore  .mcp.json  .opencode.json  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  index.html  netlify.toml  package-lock.json  package.json  server.js  start-backend.sh
backend/: README.md  pyproject.toml  requirements.txt  tasks.py  worker.py
backend/app/: __init__.py  cache.py  database.py  generator.py  main.py  models.py
graphify-out/: .graphify_root
src/: App.jsx  components.css  index.css
src/components/: A4PreviewCanvas.jsx  AssessmentForm.jsx  AssignmentsList.jsx  Header.jsx  RealtimeProgress.jsx  Sidebar.jsx
src/store/: useAssessmentStore.js
