[project]
name = "vedaai-backend"
version = "0.1.0"
description = "VedaAI Assessment Generation Backend"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "rq>=1.16.0",
    "redis>=5.0.0",
    "motor>=3.4.0",
    "pydantic>=2.7.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
]
